--- a/composer.json
+++ b/composer.json
@@ -31,13 +31,13 @@
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.9",
-        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "^1.16",
         "laravel/pint": "^1.0",
+        "laravel/sail": "^1.16",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10"
+        "phpunit/phpunit": "^9.5.10",
+        "spatie/laravel-ignition": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
