--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ APP_URL=https://tunnel.mercycloud.net
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
+USER_DEFAULT_TUNNEL_LIMIT=5
+
 DB_CONNECTION=mysql
 DB_HOST=mariadb
 DB_PORT=3306
