:new: Create Tunnel & WireGuard Tunnel

--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-bcmath": "*",
         "ext-curl": "*",
         "ext-json": "*",
-        "badcow/dns": "^4.1",
+        "badcow/dns": "^4.2",
         "dcat/laravel-admin": "2.*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
@@ -20,14 +21,14 @@
         "inertiajs/inertia-laravel": "^0.6.3",
         "irazasyed/telegram-bot-sdk": "^3.4",
         "laravel-lang/lang": "~8.0",
-        "laravel/fortify": "^1.14",
-        "laravel/framework": "^9.33",
+        "laravel/fortify": "^1.15",
+        "laravel/framework": "^9.46",
         "laravel/jetstream": "*",
         "laravel/sanctum": "^2.15",
-        "laravel/telescope": "^4.9",
+        "laravel/telescope": "^4.11",
         "laravel/tinker": "^2.7",
         "phpseclib/phpseclib": "~3.0",
-        "rlanvin/php-ip": "dev-php8.0",
+        "rlanvin/php-ip": "^3.0",
         "s1lentium/iptools": "^1.1",
         "tightenco/ziggy": "^1.0"
     },
