--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.2",
         "@vitejs/plugin-vue": "^4.0.0",
+        "@headlessui/vue": "^1.7.7",
+        "@heroicons/vue": "^2.0.13",
         "autoprefixer": "^10.4.7",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
@@ -19,5 +21,8 @@
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0",
         "vue": "^3.2.31"
+    },
+    "dependencies": {
+
     }
 }
