--- a/.env.example
+++ b/.env.example
@@ -36,9 +36,9 @@ DEFAULT_NODE_LIMIT=100000
 DEFAULT_USER_LIMIT=10
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
