--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "ext-bcmath": "*",
         "ext-curl": "*",
         "ext-json": "*",
+        "ext-sodium": "*",
         "badcow/dns": "^4.2",
         "dcat/laravel-admin": "2.*",
         "fideloper/proxy": "^4.4",
@@ -27,11 +28,11 @@
         "laravel/sanctum": "^2.15",
         "laravel/telescope": "^4.11",
         "laravel/tinker": "^2.7",
+        "owen-it/laravel-auditing": "^13.0",
         "phpseclib/phpseclib": "~3.0",
         "rlanvin/php-ip": "^3.0",
         "s1lentium/iptools": "^1.1",
-        "tightenco/ziggy": "^1.0",
-        "ext-sodium": "*"
+        "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.9",
