--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,21 @@
-APP_NAME="MercyCloud TunnelBroker"
+APP_NAME="TunnelBroker.IO"
 APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
-APP_URL=https://tunnel.mercycloud.net
+APP_URL=https://tunnelbroker.io
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-USER_DEFAULT_TUNNEL_LIMIT=5
+DEFAULT_NODE_LIMIT=100000
+DEFAULT_USER_LIMIT=5
+DEFAULT_PLAN_ID=1
+INITIAL_PLAN_TUNNEL=5
+INITIAL_PLAN_IPV6=5
+INITIAL_PLAN_IPV4=5
+INITIAL_PLAN_TRAFFIC=107374182400
+INITIAL_PLAN_SPEED=1000
+INITIAL_PLAN_LIMIT=5
 
 DB_CONNECTION=mysql
 DB_HOST=mariadb
@@ -29,11 +37,6 @@ RIPE_MNT_BY=MERCYCLOUD-MNT
 RIPE_ORGANISATION=
 RIPE_PASSWORD=
 ZONE_NAME=tunnel.mercycloud.com.
-
-L5_SWAGGER_CONST_HOST=https://tunnel.mercycloud.net/api
-
-DEFAULT_NODE_LIMIT=100000
-DEFAULT_USER_LIMIT=10
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
