--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@headlessui/vue": "^1.7.7",
+        "@heroicons/vue": "^2.0.13",
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.2",
         "@vitejs/plugin-vue": "^4.0.0",
-        "@headlessui/vue": "^1.7.7",
-        "@heroicons/vue": "^2.0.13",
         "autoprefixer": "^10.4.7",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
@@ -23,6 +23,6 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
-
+        "vue-sweetalert2": "^5.0.5"
     }
 }
