--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "daisyui": "^2.50.1",
+        "vue-country-flag-next": "^2.3.2",
         "vue-sweetalert2": "^5.0.5"
     }
 }
