:wastebasket: Remove build file & add wow.js

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     },
     "dependencies": {
         "@heroicons/vue": "^2.1.1",
-        "lodash": "^4.17.21"
+        "animate.css": "^4.1.1",
+        "flag-icons": "^7.1.0",
+        "lodash": "^4.17.21",
+        "wow.js": "^1.2.2"
     }
 }
