--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "@heroicons/vue": "^2.1.1",
         "animate.css": "^4.1.1",
+        "echarts": "^5.4.3",
         "flag-icons": "^7.1.0",
         "lodash": "^4.17.21",
         "sweetalert2": "^11.10.2",
